website/static/website/style.css
.navbar {
    border-radius: 0;
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 15px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 65px;
    line-height: 15px;
    padding: 0.5em;
    padding-bottom: 0;
    background-color: #f5f5f5;
}

.top-buffer {
    margin-top:20px;
}

